charts/jaeger/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jaeger
  namespace: development
spec:
  replicas: 1
  selector:
    matchLabels:
      app: jaeger
  template:
    metadata:
      labels:
        app: jaeger
    spec:
      containers:
        - name: jaeger
          image: jaegertracing/jaeger:2.1.0
          ports:
            - containerPort: 16686
              name: ui
            - containerPort: 4318
              name: otlp-http
            - containerPort: 9411
              name: zipkin
          resources:
            requests:
              memory: 32Mi
              cpu: 10m
            limits:
              memory: 128Mi
              cpu: 100m
          volumeMounts:
            - name: data
              mountPath: /badger
      volumes:
        - name: data
          hostPath:
            path: /mnt/tank-hd/jaeger
            type: DirectoryOrCreate
---
apiVersion: v1
kind: Service
metadata:
  name: jaeger
  namespace: development
spec:
  selector:
    app: jaeger
  ports:
    - name: ui
      port: 16686
      targetPort: 16686
    - name: otlp-http
      port: 4318
      targetPort: 4318
    - name: zipkin
      port: 9411
      targetPort: 9411
